--- a/retos_codewars.ipynb
+++ b/retos_codewars.ipynb
@@ -6,7 +6,7 @@
       "name": "retos_codewars.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPe/0Ute693cs+dU2L8nH2T",
+      "authorship_tag": "ABX9TyMiSUaxPgkSz7aN/XvYFF+1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1494,7 +1494,7 @@
       "metadata": {
         "id": "q9uhQ7f7PTRU"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1512,7 +1512,7 @@
       "metadata": {
         "id": "VhaB2lc-Po_V"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1525,7 +1525,7 @@
       "metadata": {
         "id": "btJEDVmPQdWl"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1537,7 +1537,7 @@
       "metadata": {
         "id": "EdM879FRWso0"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1550,7 +1550,7 @@
       "metadata": {
         "id": "IbcFyBhwfnqP"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1563,81 +1563,42 @@
       "metadata": {
         "id": "hARHckoiZfYo"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "s=\"Hello World!\"\n",
-        "s.translate(str.maketrans(\"!,.\",))"
+        "def stock_list(listOfArt, listOfCat):\n",
+        "    dictio = {}\n",
+        "    for x in listOfCat:\n",
+        "        dictio[x] = 0\n",
+        "    \n",
+        "    for x in listOfArt:\n",
+        "        for i in listOfCat:\n",
+        "                        \n",
+        "            if x[0] == i:\n",
+        "                if i not in dictio:\n",
+        "                    dictio[i] = int(\"\".join([j for j in x if j.isdigit()]))\n",
+        "                else:\n",
+        "                    dictio[i] += int(\"\".join([j for j in x if j.isdigit()]))\n",
+        "                    \n",
+        "    result=\"\"\n",
+        "    for i,x in enumerate(dictio):\n",
+        "        if i < len(dictio)-1:\n",
+        "            result += \"({} : {}) - \".format(x, dictio[x])\n",
+        "        else:\n",
+        "            result += \"({} : {})\".format(x, dictio[x]) \n",
+        "    \n",
+        "    total = 0\n",
+        "    for x in dictio.values():\n",
+        "        total += x"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 185
-        },
-        "id": "owVp51gXaFVY",
-        "outputId": "e94a2095-218a-4629-9633-a21b3fffbd0d"
+        "id": "owVp51gXaFVY"
       },
-      "execution_count": 59,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-59-8322f3788f82>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"Hello World!\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranslate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmaketrans\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"!,.\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: maketrans() argument 2 must be str, not None"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "result = []\n",
-        "for x in games:\n",
-        "  if x[0] > x[2]:\n",
-        "    result.append(3)\n",
-        "  elif x[0] == x[2]:\n",
-        "    result.append(1)\n",
-        "  else:\n",
-        "    result.append(0)"
-      ],
-      "metadata": {
-        "id": "fz57DCz6S5sL"
-      },
-      "execution_count": 2,
+      "execution_count": 85,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "sum(result)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "f_ORBZADT0IE",
-        "outputId": "bf62e9c0-f409-469a-c6cd-f3e454e72c2c"
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "30"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -1645,7 +1606,62 @@
         ""
       ],
       "metadata": {
-        "id": "SXGn9LFAT04r"
+        "id": "f4aBLztoJFl8"
+      },
+      "execution_count": 85,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "CKMeOUOHJUHq"
+      },
+      "execution_count": 85,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "oBf5O3fDKbBZ"
+      },
+      "execution_count": 85,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result=\"\""
+      ],
+      "metadata": {
+        "id": "E8YL26PZMCQz"
+      },
+      "execution_count": 82,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "fz57DCz6S5sL"
+      },
+      "execution_count": 85,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n"
+      ],
+      "metadata": {
+        "id": "9D4B7GtpWbDa"
       },
       "execution_count": null,
       "outputs": []
