--- a/retos_codewars.ipynb
+++ b/retos_codewars.ipynb
@@ -6,7 +6,7 @@
       "name": "retos_codewars.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMiSUaxPgkSz7aN/XvYFF+1",
+      "authorship_tag": "ABX9TyPh4MOYBCiX4tffYHOpC4Hs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1597,51 +1597,193 @@
       "metadata": {
         "id": "owVp51gXaFVY"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def is_square(n):    \n",
+        "    import math\n",
+        "    if n < 0:\n",
+        "        return False\n",
+        "    \n",
+        "    elif int(math.sqrt(n)+0.5) **2 == n:\n",
+        "        return True\n",
+        "    \n",
+        "    else:\n",
+        "        return False"
       ],
       "metadata": {
         "id": "f4aBLztoJFl8"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "import string\n",
+        "\n",
+        "abc= set(string.ascii_lowercase)\n",
+        "def is_pangram(s):\n",
+        "    cadena = set(sorted([x for x in s.lower() if x.isalpha()]))\n",
+        "    \n",
+        "    return set(sorted(cadena)) == set(string.ascii_lowercase)"
       ],
       "metadata": {
         "id": "CKMeOUOHJUHq"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "oBf5O3fDKbBZ"
-      },
-      "execution_count": 85,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "result=\"\""
+        "a = [1,3,5]"
       ],
       "metadata": {
         "id": "E8YL26PZMCQz"
       },
-      "execution_count": 82,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "solution = 1\n",
+        "for x in a:\n",
+        "  solution *= x\n",
+        "solution"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JL0QS1yzCFxP",
+        "outputId": "e30b810e-7dc5-422a-81be-dc6bda7fc38e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from numpy import prod\n",
+        "prod(a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AGqjEsysELoh",
+        "outputId": "b1a9c394-245f-47ac-90ec-1a692b3a5933"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import string\n",
+        "abc = string.ascii_lowercase"
+      ],
+      "metadata": {
+        "id": "fz57DCz6S5sL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = \"astralopitecusqwertyuiopasdfghjklzxcvbnm\""
+      ],
+      "metadata": {
+        "id": "9D4B7GtpWbDa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l =set([x for x in s])"
+      ],
+      "metadata": {
+        "id": "Z4eQDTcYcCW4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sorted(l)"
+      ],
+      "metadata": {
+        "id": "kcZocp2JmWqV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "set(sorted(l)) == set(string.ascii_lowercase)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oWcJJccImYxq",
+        "outputId": "3e433eee-afdc-42b1-fc16-6f339442afc2"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "CIemelSGmnIr"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1650,18 +1792,7 @@
         ""
       ],
       "metadata": {
-        "id": "fz57DCz6S5sL"
-      },
-      "execution_count": 85,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n"
-      ],
-      "metadata": {
-        "id": "9D4B7GtpWbDa"
+        "id": "HKVJE72dm76h"
       },
       "execution_count": null,
       "outputs": []
