--- a/retos_codewars.ipynb
+++ b/retos_codewars.ipynb
@@ -6,7 +6,7 @@
       "name": "retos_codewars.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPh4MOYBCiX4tffYHOpC4Hs",
+      "authorship_tag": "ABX9TyMIT2H0UxTgoYxzobA8yj0x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/DRA0R/retos_codewars/blob/main/retos_codewars.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/DRA0R/retos_codewars_hackerrank/blob/main/retos_codewars.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -1640,126 +1640,95 @@
     {
       "cell_type": "code",
       "source": [
-        "a = [1,3,5]"
+        "dict = {\"Pond\":\"A Lake\", \"Lake\":\"A Pond\", \"Book\":\"Bunch of Pages\", \"Chaddi\":\"The Undies\" }\n",
+        "\n",
+        "for key, value in dict.items():\n",
+        "   print(key,\":\",value)"
       ],
       "metadata": {
-        "id": "E8YL26PZMCQz"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "solution = 1\n",
-        "for x in a:\n",
-        "  solution *= x\n",
-        "solution"
-      ],
-      "metadata": {
+        "id": "f3YC7b6PKsDJ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "JL0QS1yzCFxP",
-        "outputId": "e30b810e-7dc5-422a-81be-dc6bda7fc38e"
+        "outputId": "824355fa-7308-4d84-d076-f585921444d1"
       },
       "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "15"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 14
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Pond : A Lake\n",
+            "Lake : A Pond\n",
+            "Book : Bunch of Pages\n",
+            "Chaddi : The Undies\n"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "from numpy import prod\n",
-        "prod(a)"
+        "import math\n",
+        "\n",
+        "counterN = 1 #Numerator\n",
+        "result = []\n",
+        "\n",
+        "#Prompts user for a \n",
+        "print(\"Please enter a value for calculation: \")\n",
+        "number = int(input())\n",
+        "\n",
+        "if (number <= 0):\n",
+        "    print(\"Invalid input given.\")\n",
+        "\n",
+        "#Adds the numerator up to number entered by user\n",
+        "while (counterN <= number):\n",
+        "\n",
+        "    numerator = math.factorial(counterN)\n",
+        "\n",
+        "    denominator = counterN\n",
+        "    \n",
+        "    result.append(numerator / denominator)\n",
+        "    #solucion\n",
+        "    counterN += 1\n",
+        "\n",
+        "\n",
+        "#Outputs value to user\n",
+        "print(\"The result is\" , sum(result))"
       ],
       "metadata": {
+        "id": "xfheMf93K3vF",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "AGqjEsysELoh",
-        "outputId": "b1a9c394-245f-47ac-90ec-1a692b3a5933"
+        "outputId": "6b309a13-a1ed-4484-a2b9-deecd019b41d"
       },
       "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "15"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 18
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please enter a value for calculation: \n",
+            "9\n",
+            "The result is 46234.0\n"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "import string\n",
-        "abc = string.ascii_lowercase"
-      ],
-      "metadata": {
-        "id": "fz57DCz6S5sL"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "s = \"astralopitecusqwertyuiopasdfghjklzxcvbnm\""
-      ],
-      "metadata": {
-        "id": "9D4B7GtpWbDa"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "l =set([x for x in s])"
-      ],
-      "metadata": {
-        "id": "Z4eQDTcYcCW4"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "sorted(l)"
-      ],
-      "metadata": {
-        "id": "kcZocp2JmWqV"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "set(sorted(l)) == set(string.ascii_lowercase)"
+        "string = '2022-05-08T04:18:43Z UTC [ db=dev user=test pid=1073922359 userid=100 xid=2063 ]'\n",
+        "import re\n",
+        "re.search(\"db\", string)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "oWcJJccImYxq",
-        "outputId": "3e433eee-afdc-42b1-fc16-6f339442afc2"
+        "id": "VRDSD9Pv6QUP",
+        "outputId": "1069a575-454d-4f5e-a146-4a69fb1c6c13"
       },
       "execution_count": null,
       "outputs": [
@@ -1767,11 +1736,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "True"
+              "<re.Match object; span=(27, 29), match='db'>"
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 30
         }
       ]
     },
@@ -1781,18 +1750,7 @@
         ""
       ],
       "metadata": {
-        "id": "CIemelSGmnIr"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "HKVJE72dm76h"
+        "id": "vVgOteVa_0hy"
       },
       "execution_count": null,
       "outputs": []
