--- a/retos_codewars.ipynb
+++ b/retos_codewars.ipynb
@@ -6,7 +6,7 @@
       "name": "retos_codewars.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMIT2H0UxTgoYxzobA8yj0x",
+      "authorship_tag": "ABX9TyNPRCsNgRorjM3R5e8L9AST",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1684,7 +1684,7 @@
         "#Adds the numerator up to number entered by user\n",
         "while (counterN <= number):\n",
         "\n",
-        "    numerator = math.factorial(counterN)\n",
+        "    numerator = sum(range(counterN+1))\n",
         "\n",
         "    denominator = counterN\n",
         "    \n",
@@ -1701,7 +1701,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6b309a13-a1ed-4484-a2b9-deecd019b41d"
+        "outputId": "29c73442-bd68-45df-f756-4067b09014ea"
       },
       "execution_count": null,
       "outputs": [
@@ -1710,8 +1710,65 @@
           "name": "stdout",
           "text": [
             "Please enter a value for calculation: \n",
-            "9\n",
-            "The result is 46234.0\n"
+            "6\n",
+            "The result is 13.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr = [\"beg\", \"life\", \"i\", \"to\"]\n",
+        "[[len(l),position] for position,l in enumerate(arr)]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mDgPPE1NLQk8",
+        "outputId": "cbf698e5-7f1f-4150-8785-302e44c2b7b9"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[3, 0], [4, 1], [1, 2], [2, 3]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = \"1 2 3 4 5\"\n",
+        "arr = [int(x) for x in n.strip().split()]\n",
+        "\" \".join([max(arr), min(arr)])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 202
+        },
+        "id": "5IXv3OvkNlJ1",
+        "outputId": "4cfa2fcb-5989-4345-9a08-c6450e8cb2bf"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-9-daeb0a8ab9f0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"1 2 3 4 5\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0marr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: sequence item 0: expected str instance, int found"
           ]
         }
       ]
